Render actualizado para deploy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>cv_maradona_web</title>
+<title>index</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -23,16 +23,15 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="CV_Maradona_WEB_files/libs/clipboard/clipboard.min.js"></script>
-<script src="CV_Maradona_WEB_files/libs/quarto-html/quarto.js"></script>
-<script src="CV_Maradona_WEB_files/libs/quarto-html/popper.min.js"></script>
-<script src="CV_Maradona_WEB_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="CV_Maradona_WEB_files/libs/quarto-html/anchor.min.js"></script>
-<link href="CV_Maradona_WEB_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="CV_Maradona_WEB_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="CV_Maradona_WEB_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="CV_Maradona_WEB_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="CV_Maradona_WEB_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="index_files/libs/clipboard/clipboard.min.js"></script>
+<script src="index_files/libs/quarto-html/quarto.js"></script>
+<script src="index_files/libs/quarto-html/popper.min.js"></script>
+<script src="index_files/libs/quarto-html/tippy.umd.min.js"></script>
+<link href="index_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="index_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="index_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="index_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="index_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 <style>html{ scroll-behavior: smooth; }</style>
 
 
@@ -65,34 +64,42 @@ ul.task-list li input[type="checkbox"] {
     </div>
   </div>
 </div>
+<!-- ====== CARD DE ESTADÍSTICAS ====== -->
+<div class="stats-card">
+  <div class="stat">
+    <h2>704</h2>
+    <p>Partidos jugados</p>
+  </div>
+  <div class="stat">
+    <h2>359</h2>
+    <p>Goles</p>
+  </div>
+  <div class="stat">
+    <h2>258</h2>
+    <p>Asistencias</p>
+  </div>
+</div>
 <div id="cv" class="cv-grid-min">
 <div class="card sidebar-min">
 <section id="contacto" class="level3">
-<h3 class="anchored" data-anchor-id="contacto">Contacto</h3>
-<ul>
-<li>📞 +54 9 11 1234567<br>
-</li>
-<li>✉️ d10s@gmail.com<br>
-</li>
-<li>🌐 <a href="https://www.d10s.com" target="_blank" rel="noopener">www.D10S.com</a></li>
-</ul>
+<h3 data-anchor-id="contacto">Contacto</h3>
+<p>+54 9 11 1234567<br>
+d10s@gmail.com<br>
+<a href="https://www.d10s.com" target="_blank" rel="noopener">www.D10S.com</a></p>
 </section>
 <section id="idiomas" class="level3">
-<h3 class="anchored" data-anchor-id="idiomas">Idiomas</h3>
-<ul>
-<li><strong>Español:</strong> lengua madre<br>
-</li>
-<li><strong>Italiano:</strong> C1</li>
-</ul>
+<h3 data-anchor-id="idiomas">Idiomas</h3>
+<p><strong>Español:</strong> lengua madre<br>
+<strong>Italiano:</strong> C1</p>
 </section>
 <section id="sobre-mí" class="level3">
-<h3 class="anchored" data-anchor-id="sobre-mí">Sobre mí</h3>
+<h3 data-anchor-id="sobre-mí">Sobre mí</h3>
 <p>Perfil con liderazgo dentro y fuera de la cancha. Creativo, influyente y con amplia experiencia en alto rendimiento, gestión de planteles, representación internacional y comunicación mediática.</p>
 </section>
 </div>
 <div class="card main-min">
 <section id="experiencia-profesional-destacada" class="level2">
-<h2 class="anchored" data-anchor-id="experiencia-profesional-destacada">Experiencia profesional destacada</h2>
+<h2 data-anchor-id="experiencia-profesional-destacada">Experiencia profesional destacada</h2>
 <ul>
 <li><strong>2008–2010 — Selección Argentina (DT).</strong> Conducción en Eliminatorias y Mundial FIFA 2010.<br>
 </li>
@@ -110,7 +117,7 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 </section>
 <section id="educación-y-formación" class="level2">
-<h2 class="anchored" data-anchor-id="educación-y-formación">Educación y formación</h2>
+<h2 data-anchor-id="educación-y-formación">Educación y formación</h2>
 <ul>
 <li><strong>1998–1999 — AFA.</strong> Curso de dirección técnica.<br>
 </li>
@@ -118,19 +125,36 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 </section>
 <section id="capacidades-relacionales-y-organizativas" class="level2">
-<h2 class="anchored" data-anchor-id="capacidades-relacionales-y-organizativas">Capacidades relacionales y organizativas</h2>
+<h2 data-anchor-id="capacidades-relacionales-y-organizativas">Capacidades relacionales y organizativas</h2>
 <p>Liderazgo y capitanía de equipos. Comunicación carismática en medios y eventos públicos. Mentoría de jóvenes talentos.</p>
 </section>
 <section id="competencias-técnicas" class="level2">
-<h2 class="anchored" data-anchor-id="competencias-técnicas">Competencias técnicas</h2>
+<h2 data-anchor-id="competencias-técnicas">Competencias técnicas</h2>
 <p>Estrategia y táctica futbolística. Gestión de alto rendimiento. Representación internacional y manejo de prensa. Docencia futbolística y clínicas deportivas.</p>
 </section>
 </div>
 </div>
+<!-- ====== LÍNEA DE TIEMPO (INTERACTIVA) ====== -->
+<section class="timeline-card" id="maradona-timeline" aria-label="Línea de tiempo de hitos de la carrera">
+  <header class="timeline-head">
+    <h3>Hitos de la carrera</h3>
+    <p class="muted">Explorá hitos clave: tocá o hacé clic sobre cada punto para ver más.</p>
+  </header>
+
+  <!-- Riel desplazable -->
+  <div class="timeline-viewport" id="tlViewport">
+    <ol class="timeline-rail" id="tlRail" role="list"></ol>
+  </div>
+
+  <!-- Panel de detalle -->
+  <div class="timeline-detail" id="tlDetail" aria-live="polite">
+    <div class="empty">Seleccioná un hito para ver el detalle.</div>
+  </div>
+</section>
 <div class="gallery-card">
-  <h3 class="anchored">Galería de logros</h3>
+  <h3>Trayectoria en imágenes</h3>
   <p class="gallery-intro">
-    Una selección de imágenes que resumen los logros conseguidos.
+    Una selección de imágenes que resumen mi trayectoria y logros conseguidos.
   </p>
 
   <div class="photo-grid">
@@ -142,6 +166,7 @@ ul.task-list li input[type="checkbox"] {
     <img src="assets/maradona_tribuna.jpg" alt="Maradona saludando al público">
   </div>
 </div>
+
 <style>
 /* ====== Minimal, profesional, consistente con cards ====== */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@600;700;800&family=Quicksand:wght@500;600&display=swap');
@@ -378,10 +403,309 @@ body {
   backdrop-filter: blur(8px); /* ✨ soft glassy effect */
   -webkit-backdrop-filter: blur(8px);
 }
+
+/* ====== CARD DE ESTADÍSTICAS ====== */
+.stats-card {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.9);
+  border: 1px solid var(--line);
+  border-radius: 12px;
+  padding: 1.2rem 1rem;
+  margin: 1rem 0;
+  box-shadow: 0 4px 14px rgba(0, 0, 0, 0.05);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+}
+
+.stat {
+  text-align: center;
+}
+
+.stat h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2.4rem;
+  color: var(--brand);
+  margin: 0;
+  line-height: 1.1;
+}
+
+.stat p {
+  font-family: 'Inter', sans-serif;
+  color: #333;
+  font-size: 1rem;
+  margin-top: 0.3rem;
+}
+
+/* Responsive */
+@media (max-width: 700px) {
+  .stats-card {
+    flex-direction: column;
+    gap: 0.8rem;
+  }
+  .stat h2 {
+    font-size: 2rem;
+  }
+}
+
+/* ====== Timeline ====== */
+.timeline-card{
+  background: rgba(255,255,255,0.9);
+  border: 1px solid var(--line);
+  border-radius: 12px;
+  padding: 1.0rem;
+  margin-top: 1rem;
+  box-shadow: 0 4px 14px rgba(0,0,0,.05);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+}
+.timeline-head h3{
+  font-family: 'Quicksand', sans-serif;
+  color: var(--brand);
+  margin: .2rem 0 .1rem;
+}
+.timeline-head .muted{
+  color:#555; margin:0;
+  font-family:'Inter',sans-serif; font-size:.95rem;
+}
+
+.timeline-viewport{
+  overflow: auto;
+  padding: .5rem 8px;          /* un poco más de padding lateral */
+  cursor: grab;
+}
+.timeline-viewport:active { cursor: grabbing; }
+
+/* ---- Riel: FLEX + línea contínua por ::before ---- */
+.timeline-rail{
+  position: relative;
+  display: flex;
+  gap: 1.5rem;
+  list-style: none;
+  margin: .5rem 0 0;
+  padding: 1rem 0 1rem;        /* sin border-top: la línea la dibuja ::before */
+}
+.timeline-rail::before{
+  content:"";
+  position:absolute;
+  left:0;
+  right:0;                     /* cubre todo el ancho real del riel */
+  top: 10px;                   /* altura de la línea (ajustable) */
+  height:2px;
+  background: var(--brand);
+}
+
+/* ---- Ítems ---- */
+.timeline-item{
+  position: relative;
+  padding-top: .8rem;
+  text-align: center;
+  font-family:'Inter',sans-serif;
+  min-width: 200px;            /* evita que el texto quede “apretado” */
+}
+
+/* Punto centrado sobre la línea */
+.timeline-dot{
+  width:14px; height:14px;
+  border:3px solid #fff;
+  border-radius:50%;
+  background: var(--brand);
+  position: absolute;
+  top: 10px;                   /* mismo top que la línea ::before */
+  left: 50%;
+  transform: translate(-50%, -50%);  /* centra el punto sobre la línea */
+  box-shadow: 0 0 0 2px var(--brand);
+}
+
+/* Tarjeta clickeable del hito */
+.timeline-btn{
+  display: inline-block;
+  margin-top:.45rem;
+  background: #fff;
+  border:1px solid var(--line);
+  border-radius: 10px;
+  padding:.55rem .6rem;
+  width: 100%;
+  box-shadow: 0 2px 8px rgba(0,0,0,.05);
+  transition: transform .1s ease, box-shadow .2s ease;
+  text-align:left;
+
+  /* ✅ textos largos no se salen */
+  white-space: normal;
+  overflow-wrap: anywhere;
+  word-break: break-word;
+}
+.timeline-btn:focus-visible { outline: 3px solid #a7e3e5; }
+.timeline-btn:hover{ transform: translateY(-2px); box-shadow:0 6px 16px rgba(0,0,0,.1); }
+
+.tl-year{ font-weight:700; color:#0b4749; font-family:'Montserrat',sans-serif; }
+.tl-title{ display:block; color:#333; margin-top:.15rem; }
+.tl-tag{
+  display:inline-block; margin-top:.35rem; font-size:.78rem; color:#0b4749;
+  background: rgba(14,165,168,.10); border:1px solid rgba(14,165,168,.25);
+  padding:.12rem .4rem; border-radius: 999px;
+}
+
+/* Panel detalle */
+.timeline-detail{
+  margin-top: .8rem;
+  border-top:1px dashed var(--line);
+  padding-top:.8rem;
+  min-height: 64px;
+}
+.timeline-detail .empty{ color:#555; font-style: italic; }
+.timeline-detail h4{
+  margin:.2rem 0; color:#0b4749; font-family:'Montserrat',sans-serif;
+}
+.timeline-detail .meta{ color:#444; margin:0; }
+.timeline-detail p{ margin:.4rem 0 0; color:#2b2b2b; }
+
+/* Etiquetas por tipo */
+.tl--club  .timeline-dot{ background:#1976D2; box-shadow:0 0 0 2px #1976D2; }
+.tl--intl  .timeline-dot{ background:#16A34A; box-shadow:0 0 0 2px #16A34A; }
+.tl--award .timeline-dot{ background:#F59E0B; box-shadow:0 0 0 2px #F59E0B; }
+
+/* Responsive */
+@media (max-width: 700px){
+  .timeline-item{ min-width: 75vw; }  /* facilita swipe en móviles */
+}
 </style>
 
 </main>
 <!-- /main column -->
+<script>
+// ===== Datos de hitos (solo los más relevantes) =====
+const TL_EVENTS = [
+  // Internacional juveniles / selecciones
+  { year: 1979, type:'intl',  title:'Campeón Mundial Sub-20', place:'Japón', team:'Argentina Sub-20',
+    desc:'MVP (Balón de Oro) y Botín de Plata. Inicio del reconocimiento internacional.' },
+  { year: 1986, type:'intl',  title:'Campeón Mundial', place:'México', team:'Argentina',
+    desc:'Capitán. Autor del “Gol del Siglo” e icónico partido vs. Inglaterra.' },
+
+  // Clubes
+  { year: 1981, type:'club',  title:'Primera División (Metropolitano)', team:'Boca Juniors',
+    desc:'Título local con Boca en su primera etapa (Metropolitano 1981).' },
+  { year: 1983, type:'club',  title:'Copa del Rey & Copa de la Liga', team:'FC Barcelona',
+    desc:'Doble copa doméstica en España (1982/83).' },
+  { year: 1987, type:'club',  title:'Serie A + Coppa Italia', team:'Napoli',
+    desc:'Histórico doblete 1986/87: primera liga en la historia del Napoli.' },
+  { year: 1989, type:'club',  title:'Copa UEFA', team:'Napoli',
+    desc:'Título continental europeo (1988/89).' },
+  { year: 1990, type:'club',  title:'Serie A + Supercopa de Italia', team:'Napoli',
+    desc:'Segundo scudetto (1989/90) y Supercopa 1990.' },
+
+  // Intercontinental / Conmebol-UEFA
+  { year: 1993, type:'intl',  title:'Copa Conmebol-UEFA (Artemio Franchi)', team:'Argentina',
+    desc:'Torneo entre campeones de América y Europa, disputado en Mar del Plata.' },
+
+  // Premios individuales mayores
+  { year: 1986, type:'award', title:'Balón de Oro del Mundial', 
+    desc:'Mejor jugador de la Copa del Mundo 1986.' },
+  { year: 1995, type:'award', title:'Balón de Oro Honorífico',
+    desc:'France Football le otorga el Balón de Oro honorario.' },
+  { year: 2000, type:'award', title:'Jugador del Siglo (FIFA)',
+    desc:'Reconocimiento de la FIFA compartido (votación popular).' },
+  { year: 2002, type:'award', title:'Gol del Siglo (FIFA)',
+    desc:'Reconocimiento oficial al gol a Inglaterra (1986) en la encuesta de la FIFA (2002).' },
+  { year: 2004, type:'award', title:'FIFA 100',
+    desc:'Listado honorífico de los 125 mejores futbolistas vivos.' },
+  { year: 2017, type:'award', title:'Mejor de la historia (FourFourTwo)',
+    desc:'La revista lo coloca como #1 histórico.' },
+  { year: 2020, type:'award', title:'Once histórico del Balón de Oro',
+    desc:'Incluido en el equipo ideal histórico de France Football.' }
+];
+
+// ===== Render =====
+(function(){
+  const rail   = document.getElementById('tlRail');
+  const panel  = document.getElementById('tlDetail');
+  const view   = document.getElementById('tlViewport');
+  if(!rail || !panel || !view) return;
+
+  // Ordenar por año
+  TL_EVENTS.sort((a,b)=> a.year - b.year);
+
+  TL_EVENTS.forEach((ev,i)=>{
+    const li = document.createElement('li');
+    li.className = `timeline-item tl--${ev.type}`;
+    li.setAttribute('role','listitem');
+
+    // Punto
+    const dot = document.createElement('span');
+    dot.className = 'timeline-dot';
+    dot.setAttribute('aria-hidden','true');
+    li.appendChild(dot);
+
+    // Botón
+    const btn = document.createElement('button');
+    btn.className = 'timeline-btn';
+    btn.type = 'button';
+    btn.innerHTML = `
+      <span class="tl-year">${ev.year}</span><br>
+      <span class="tl-title">${ev.title}${ev.team?` — <strong>${ev.team}</strong>`:''}</span>
+      <span class="tl-tag">${ev.type === 'club' ? 'Club' : ev.type === 'intl' ? 'Selección' : 'Premio'}</span>
+    `;
+    btn.addEventListener('click', ()=> showDetail(ev, li));
+    li.appendChild(btn);
+
+    rail.appendChild(li);
+  });
+
+  function showDetail(ev, li){
+    // Marcar activo
+    rail.querySelectorAll('.timeline-item').forEach(x=> x.classList.remove('is-active'));
+    li.classList.add('is-active');
+
+    panel.innerHTML = `
+      <h4>${ev.title}${ev.team?` — <span class="meta">${ev.team}</span>`:''}</h4>
+      <p class="meta"><strong>${ev.year}</strong>${ev.place?` · ${ev.place}`:''}</p>
+      <p>${ev.desc || ''}</p>
+    `;
+    // scroll al elemento
+    li.scrollIntoView({behavior:'smooth', inline:'center', block:'nearest'});
+  }
+
+  // Drag-to-scroll (desktop y táctil)
+  let isDown=false, startX=0, startScroll=0;
+  const start = (x)=>{ isDown=true; startX=x; startScroll=view.scrollLeft; }
+  const move  = (x)=>{ if(!isDown) return; const dx = x - startX; view.scrollLeft = startScroll - dx; }
+  const end   = ()=>{ isDown=false; }
+
+  view.addEventListener('mousedown', e=> start(e.pageX));
+  view.addEventListener('mousemove', e=> move(e.pageX));
+  view.addEventListener('mouseleave', end);
+  view.addEventListener('mouseup', end);
+
+  view.addEventListener('touchstart', e=> start(e.touches[0].pageX), {passive:true});
+  view.addEventListener('touchmove',  e=> move(e.touches[0].pageX), {passive:true});
+  view.addEventListener('touchend', end);
+
+  // Foco inicial (opcional: abre el más icónico)
+  const idxDefault = TL_EVENTS.findIndex(e=> e.year===1986 && e.type==='intl');
+  if (idxDefault >= 0) rail.children[idxDefault]?.querySelector('button')?.click();
+})();
+</script>
+
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+  const rail = document.getElementById('tlRail');
+  if (!rail) return;
+
+  const syncLine = () => {
+    rail.style.setProperty('--tl-line-width', rail.scrollWidth + 'px');
+  };
+  // Usamos una variable CSS en ::before si querés:
+  // .timeline-rail::before { width: var(--tl-line-width); left:0; right:auto; }
+  const style = document.createElement('style');
+  style.textContent = `.timeline-rail::before{ left:0; right:auto; width:var(--tl-line-width); }`;
+  document.head.appendChild(style);
+
+  syncLine();
+  new ResizeObserver(syncLine).observe(rail);
+  window.addEventListener('resize', syncLine);
+});
+</script>
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
   const toggleBodyColorMode = (bsSheetEl) => {
@@ -402,13 +726,6 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     }
   }
   toggleBodyColorPrimary();  
-  const icon = "";
-  const anchorJS = new window.AnchorJS();
-  anchorJS.options = {
-    placement: 'right',
-    icon: icon
-  };
-  anchorJS.add('.anchored');
   const isCodeAnnotation = (el) => {
     for (const clz of el.classList) {
       if (clz.startsWith('code-annotation-')) {                     
@@ -619,5 +936,5 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 
 
 
-<script src="CV_Maradona_WEB_files/libs/quarto-html/zenscroll-min.js"></script>
+<script src="index_files/libs/quarto-html/zenscroll-min.js"></script>
 </body></html>
