Render actualizado para deploy

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ ul.task-list li input[type="checkbox"] {
 <h3 data-anchor-id="contacto">Contacto</h3>
 <p>+54 9 11 1234567<br>
 d10s@gmail.com<br>
-<a href="https://www.d10s.com" target="_blank" rel="noopener">www.D10S.com</a></p>
+<a href="https://es.wikipedia.org/wiki/La_mano_de_Dios" target="_blank" rel="noopener">www.D10S.com</a></p>
 </section>
 <section id="idiomas" class="level3">
 <h3 data-anchor-id="idiomas">Idiomas</h3>
