--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ ul.task-list li input[type="checkbox"] {
 
 
 
+
+  <title>CV de Diego Armando Maradona — Mejorá Tu CV</title>
+
 <!-- ====== HERO ====== -->
 <div class="card hero-min">
   <div class="hero-grid-min">
