--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ ul.task-list li input[type="checkbox"] {
 <style>html{ scroll-behavior: smooth; }</style>
 
 
-<link rel="stylesheet" href="styles-cv-web.css">
+<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -94,6 +94,7 @@ ul.task-list li input[type="checkbox"] {
     </div>
   </div>
 </div>
+<div class="no-print">
 <!-- ====== CARD DE ESTADÍSTICAS ====== -->
 <div class="stats-card">
   <div class="stat">
@@ -108,6 +109,7 @@ ul.task-list li input[type="checkbox"] {
     <h2>258</h2>
     <p>Asistencias</p>
   </div>
+</div>
 </div>
 <div id="cv" class="cv-grid-min">
 <div class="card sidebar-min">
@@ -200,513 +202,6 @@ d10s@gmail.com<br>
   </div>
 </div>
 </div>
-
-<style>
-/* ====== Minimal, profesional, consistente con cards ====== */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@600;700;800&family=Quicksand:wght@500;600&display=swap');
-
-:root {
-  --ink: #16181b;
-  --muted: #6b7280;
-  --brand: #0EA5A8;
-  --line: #e7eef2;
-}
-
-body {
-  color: var(--ink);
-  font-family: 'Inter', system-ui, sans-serif;
-}
-
-a {
-  text-decoration: none;
-}
-a:hover {
-  text-decoration: underline;
-}
-
-/* ====== HERO CARD ====== */
-.hero-min {
-  padding: 1.1rem;
-  background: #ffffff;
-  border: 1px solid var(--line);
-  border-radius: 1rem;
-  box-shadow: 0 4px 14px rgba(0, 0, 0, 0.05);
-}
-
-.hero-grid-min {
-  display: grid;
-  grid-template-columns: 160px 1fr;
-  gap: 1rem;
-  align-items: center;
-}
-
-.photo-min img {
-  width: 165px;
-  height: 165px;
-  object-fit: cover;
-  border-radius: 12px;
-  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.10);
-}
-
-.title-min h1 {
-  margin: 0;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  letter-spacing: -0.4px;
-  font-size: 2.5em;        
-  color: #0b4749;           
-}
-
-.subtitle-min {
-  margin: 0.15rem 0 0.5rem;
-  color: #147c7f;
-  font-family: 'Inter', sans-serif;
-  font-weight: 600;
-  font-size: 1.05rem;
-}
-
-.hero-divider-min {
-  border: 0;
-  height: 2px;
-  background: var(--brand);
-  width: 110px;
-  margin: 0.2rem 0 0.6rem;
-}
-
-.lead-min {
-  margin: 0;
-  color: #374151;
-  font-family: 'Inter', sans-serif;
-  line-height: 1.5;
-}
-
-/* ====== GRID PRINCIPAL ====== */
-.cv-grid-min {
-  display: grid;
-  grid-template-columns: 300px 1fr;
-  gap: 1rem;
-  margin-top: 1rem;
-}
-
-.sidebar-min {
-  background: #fbfdfe;
-  border: 1px solid var(--line);
-  border-radius: 12px;
-  padding: 1rem;
-  font-family: 'Inter', sans-serif;
-}
-
-.sidebar-min h3 {
-  font-family: 'Quicksand', sans-serif;
-  font-weight: 600;
-  color: var(--brand);
-}
-
-.main-min {
-  background: #fff;
-  border: 1px solid var(--line);
-  border-radius: 12px;
-  padding: 1rem;
-  font-family: 'Inter', sans-serif;
-}
-
-.main-min h2 {
-  font-family: 'Quicksand', sans-serif;
-  font-weight: 600;
-  color: var(--brand);
-  margin-top: 0.2rem;
-}
-
-.main-min p,
-.sidebar-min p,
-.sidebar-min li {
-  color: #2b2b2b;
-  font-family: 'Inter', sans-serif;
-  line-height: 1.6;
-}
-
-.main-min strong {
-  font-weight: 600;
-}
-
-/* ====== BULLETS ====== */
-.main-min ul {
-  margin: 0 0 0.6rem 1.1rem;
-}
-.main-min li {
-  margin: 0.25rem 0;
-}
-
-/* ====== RESPONSIVE ====== */
-@media (max-width: 900px) {
-  .hero-grid-min {
-    grid-template-columns: 100px 1fr;
-  }
-  .photo-min img {
-    width: 100px;
-    height: 100px;
-  }
-  .cv-grid-min {
-    grid-template-columns: 1fr;
-  }
-}
-
-/* ====== GALERÍA ICÓNICA ====== */
-.gallery-card {
-  background: #ffffff;
-  border: 1px solid var(--line);
-  border-radius: 12px;
-  padding: 1.2rem;
-  margin-top: 1.5rem;
-  box-shadow: 0 4px 14px rgba(0, 0, 0, 0.05);
-}
-
-.gallery-card h3 {
-  font-family: 'Quicksand', sans-serif;
-  color: var(--brand);
-  font-weight: 600;
-  margin-top: 0;
-}
-
-.gallery-intro {
-  font-family: 'Inter', sans-serif;
-  color: #444;
-  margin-bottom: 1rem;
-}
-
-/* Grid: 2 columnas × 3 filas */
-.photo-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
-  position: relative;
-  overflow: visible; /* 👈 Permite que las imágenes salgan de los bordes */
-}
-
-/* Cada celda */
-.photo-grid figure {
-  position: relative;
-  border-radius: 10px;
-  margin: 0;
-  z-index: 0;
-  transition: z-index 0.2s ease;
-}
-
-/* Imagen con proporción natural */
-.photo-grid img {
-  width: 100%;
-  aspect-ratio: 4 / 3;
-  object-fit: cover;
-  border-radius: 10px;
-  transition: transform 0.45s ease, box-shadow 0.3s ease;
-  cursor: zoom-in;
-  will-change: transform;
-}
-
-/* Hover: aumento sin recorte */
-.photo-grid img:hover {
-  transform: scale(1.2);
-  z-index: 10;
-  position: relative;
-  box-shadow: 0 12px 28px rgba(0, 0, 0, 0.25);
-}
-
-/* En pantallas chicas → 1 columna */
-@media (max-width: 700px) {
-  .photo-grid {
-    grid-template-columns: 1fr;
-  }
-}
-
-:root {
-  --brand-start: #74C2E1;  /* celeste argentino */
-  --brand-end: #FFD76F;    /* dorado bandera del sol */
-  --ink: #1c1c1c;
-}
-body {
-  background: linear-gradient(145deg, var(--brand-start) 0%, var(--brand-end) 90%);
-}
-.card,
-.sidebar-min,
-.main-min,
-.gallery-card {
-  background: rgba(255, 255, 255, 0.90); /* 👈 0.85 = slight transparency */
-  border: 1px solid rgba(255, 255, 255, 0.25);
-  border-radius: 12px;
-  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(8px); /* ✨ soft glassy effect */
-  -webkit-backdrop-filter: blur(8px);
-}
-
-/* ====== CARD DE ESTADÍSTICAS ====== */
-.stats-card {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background: rgba(255, 255, 255, 0.9);
-  border: 1px solid var(--line);
-  border-radius: 12px;
-  padding: 1.2rem 1rem;
-  margin: 1rem 0;
-  box-shadow: 0 4px 14px rgba(0, 0, 0, 0.05);
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-}
-
-.stat {
-  text-align: center;
-}
-
-.stat h2 {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 2.4rem;
-  color: var(--brand);
-  margin: 0;
-  line-height: 1.1;
-}
-
-.stat p {
-  font-family: 'Inter', sans-serif;
-  color: #333;
-  font-size: 1rem;
-  margin-top: 0.3rem;
-}
-
-/* Responsive */
-@media (max-width: 700px) {
-  .stats-card {
-    flex-direction: column;
-    gap: 0.8rem;
-  }
-  .stat h2 {
-    font-size: 2rem;
-  }
-}
-
-/* ====== Timeline ====== */
-.timeline-card{
-  background: rgba(255,255,255,0.9);
-  border: 1px solid var(--line);
-  border-radius: 12px;
-  padding: 1.0rem;
-  margin-top: 1rem;
-  box-shadow: 0 4px 14px rgba(0,0,0,.05);
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-}
-.timeline-head h3{
-  font-family: 'Quicksand', sans-serif;
-  color: var(--brand);
-  margin: .2rem 0 .1rem;
-}
-.timeline-head .muted{
-  color:#555; margin:0;
-  font-family:'Inter',sans-serif; font-size:.95rem;
-}
-
-.timeline-viewport{
-  overflow: auto;
-  padding: .5rem 8px;          /* un poco más de padding lateral */
-  cursor: grab;
-}
-.timeline-viewport:active { cursor: grabbing; }
-
-/* ---- Riel: FLEX + línea contínua por ::before ---- */
-.timeline-rail{
-  position: relative;
-  display: flex;
-  gap: 1.5rem;
-  list-style: none;
-  margin: .5rem 0 0;
-  padding: 1rem 0 1rem;        /* sin border-top: la línea la dibuja ::before */
-}
-.timeline-rail::before{
-  content:"";
-  position:absolute;
-  left:0;
-  right:0;                     /* cubre todo el ancho real del riel */
-  top: 10px;                   /* altura de la línea (ajustable) */
-  height:2px;
-  background: var(--brand);
-}
-
-/* ---- Ítems ---- */
-.timeline-item{
-  position: relative;
-  padding-top: .8rem;
-  text-align: center;
-  font-family:'Inter',sans-serif;
-  min-width: 200px;            /* evita que el texto quede “apretado” */
-}
-
-/* Punto centrado sobre la línea */
-.timeline-dot{
-  width:14px; height:14px;
-  border:3px solid #fff;
-  border-radius:50%;
-  background: var(--brand);
-  position: absolute;
-  top: 10px;                   /* mismo top que la línea ::before */
-  left: 50%;
-  transform: translate(-50%, -50%);  /* centra el punto sobre la línea */
-  box-shadow: 0 0 0 2px var(--brand);
-}
-
-/* Tarjeta clickeable del hito */
-.timeline-btn{
-  display: inline-block;
-  margin-top:.45rem;
-  background: #fff;
-  border:1px solid var(--line);
-  border-radius: 10px;
-  padding:.55rem .6rem;
-  width: 100%;
-  box-shadow: 0 2px 8px rgba(0,0,0,.05);
-  transition: transform .1s ease, box-shadow .2s ease;
-  text-align:left;
-
-  /* ✅ textos largos no se salen */
-  white-space: normal;
-  overflow-wrap: anywhere;
-  word-break: break-word;
-}
-.timeline-btn:focus-visible { outline: 3px solid #a7e3e5; }
-.timeline-btn:hover{ transform: translateY(-2px); box-shadow:0 6px 16px rgba(0,0,0,.1); }
-
-.tl-year{ font-weight:700; color:#0b4749; font-family:'Montserrat',sans-serif; }
-.tl-title{ display:block; color:#333; margin-top:.15rem; }
-.tl-tag{
-  display:inline-block; margin-top:.35rem; font-size:.78rem; color:#0b4749;
-  background: rgba(14,165,168,.10); border:1px solid rgba(14,165,168,.25);
-  padding:.12rem .4rem; border-radius: 999px;
-}
-
-/* Panel detalle */
-.timeline-detail{
-  margin-top: .8rem;
-  border-top:1px dashed var(--line);
-  padding-top:.8rem;
-  min-height: 64px;
-}
-.timeline-detail .empty{ color:#555; font-style: italic; }
-.timeline-detail h4{
-  margin:.2rem 0; color:#0b4749; font-family:'Montserrat',sans-serif;
-}
-.timeline-detail .meta{ color:#444; margin:0; }
-.timeline-detail p{ margin:.4rem 0 0; color:#2b2b2b; }
-
-/* Etiquetas por tipo */
-.tl--club  .timeline-dot{ background:#1976D2; box-shadow:0 0 0 2px #1976D2; }
-.tl--intl  .timeline-dot{ background:#16A34A; box-shadow:0 0 0 2px #16A34A; }
-.tl--award .timeline-dot{ background:#F59E0B; box-shadow:0 0 0 2px #F59E0B; }
-
-/* Responsive */
-@media (max-width: 700px){
-  .timeline-item{ min-width: 75vw; }  /* facilita swipe en móviles */
-}
-
-/* ===== HEADER ICONOS SUPERIORES ===== */
-.cv-header {
-  display: flex;
-  justify-content: flex-end; /* alinea los iconos a la derecha */
-  align-items: center;
-  padding: 0rem 0.3rem;
-  background: transparent; /* sin fondo */
-  box-shadow: none;         /* sin sombra */
-  border: none;
-  margin-bottom: 0.5rem;
-}
-
-.cv-header-right a {
-  color: rgba(255,255,255,0.8);          /* verde principal */
-  margin-left: 0.1rem;       /* espacio entre íconos */
-  text-decoration: none;
-  font-size: 1.3rem;       /* tamaño de íconos */
-  transition: color 0.25s ease, transform 0.25s ease;
-}
-
-.cv-header-right a:hover {
-  color: #0b4749;          /* verde más oscuro en hover */
-  transform: translateY(-2px);
-}
-
-/* En pantallas chicas centramos los iconos */
-@media (max-width: 700px) {
-  .cv-header {
-    justify-content: center;
-    padding: 0.4rem 0;
-  }
-  .cv-header-right a {
-    margin-left: 0.8rem;
-    font-size: 1.4rem;
-  }
-}
-
-/* === Ocultar bloques .no-print al imprimir (Chrome, etc.) === */
-@media print {
-  .no-print,
-  .no-print * {
-    display: none !important;
-  }
-
-  /* Limpieza de estilos que ensucian el PDF */
-  body {
-    background: #fff !important;       /* quita degradados */
-    -webkit-print-color-adjust: exact;  /* conserva colores cuando corresponde */
-    print-color-adjust: exact;
-  }
-
-  /* Sugerencias de márgenes/paginado */
-  @page { margin: 14mm; }
-}
-
-/* ===== Imprimir sin “delimitar” las cards ===== */
-@media print {
-  /* Fondo limpio y colores fieles */
-  body { background: #fff !important; -webkit-print-color-adjust: exact; print-color-adjust: exact; }
-  @page { margin: 14mm; }
-
-  /* Quitar bordes/sombras/fondos de contenedores tipo card */
-  .card,
-  .sidebar-min,
-  .main-min,
-  .gallery-card,
-  .stats-card,
-  .timeline-card {
-    background: transparent !important;
-    border: 0 !important;
-    box-shadow: none !important;
-    backdrop-filter: none !important;
-    -webkit-backdrop-filter: none !important;
-  }
-
-  /* Mantener el padding (estructura) pero sin líneas ni fondos internos */
-  .card * {
-    background: transparent !important;
-    box-shadow: none !important;
-  }
-
-  /* Títulos y texto legibles en blanco y negro (opcional) */
-  .main-min h2,
-  .sidebar-min h3,
-  .timeline-head h3 { color: #000 !important; }
-
-  /* Evitar cortes feos dentro de bloques */
-  .card,
-  .sidebar-min,
-  .main-min,
-  .gallery-card,
-  .stats-card,
-  .timeline-card,
-  h2, h3 {
-    break-inside: avoid;
-    page-break-inside: avoid;
-  }
-
-  /* Seguí ocultando lo no imprimible */
-  .no-print, .no-print * { display: none !important; }
-}
-</style>
 
 </main>
 <!-- /main column -->
