--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="index_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="index_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 <style>html{ scroll-behavior: smooth; }</style>
+<link rel="icon" href="assets/logo_icon.png" type="image/png">
 
 
 <link rel="stylesheet" href="styles.css">
